Some warnings resolved